--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
             "homepage": "https://github.com/crynobone"
         }
     ],
+    "bin": [
+        "testbench"
+    ],
     "autoload": {
         "psr-4": {
             "Orchestra\\Testbench\\" : "src/"
@@ -33,6 +36,7 @@
         "laravel/framework": "^7.0",
         "laravel/laravel": "dev-develop",
         "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.4 || ^9.0"
     },
     "suggest": {
