Support for anonymous migration.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,8 @@
         "vlucas/phpdotenv": "^5.1"
     },
     "require-dev": {
-        "laravel/framework": "^8.26",
-        "laravel/laravel": "8.x-dev",
+        "laravel/framework": "^8.37",
+        "laravel/laravel": "dev-anonymous-migrations",
         "mockery/mockery": "^1.4.2",
         "orchestra/canvas": "^6.1",
         "phpunit/phpunit": "^8.4 || ^9.3.3 || ^10.0",
@@ -44,7 +44,7 @@
         "symfony/process": "^5.0"
     },
     "suggest": {
-        "laravel/framework": "Required for testing (^8.26).",
+        "laravel/framework": "Required for testing (^8.37).",
         "mockery/mockery": "Allow using Mockery for testing (^1.4.2).",
         "orchestra/testbench-browser-kit": "Allow using legacy Laravel BrowserKit for testing (^6.0).",
         "orchestra/testbench-dusk": "Allow using Laravel Dusk for testing (^6.0).",
