--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "fakerphp/faker": "^1.9.2",
         "laravel/framework": "^9.0",
         "mockery/mockery": "^1.4.2",
+        "orchestra/canvas": "^7.0",
         "phpunit/phpunit": "^9.4 || ^10.0",
         "symfony/process": "^6.0",
         "symfony/yaml": "^6.0",
