--- a/.github/workflows/experimental-tests.yml
+++ b/.github/workflows/experimental-tests.yml
@@ -21,7 +21,7 @@ jobs:
         dependencies:
           - "highest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
