--- a/.github/workflows/experimental-tests.yml
+++ b/.github/workflows/experimental-tests.yml
@@ -15,13 +15,13 @@ jobs:
         os:
           - "ubuntu-latest"
         php:
-          - "8.1"
+          - "8.2"
         phpunit:
           - "^10.0"
         dependencies:
           - "highest"
         experimental:
-          - false
+          - true
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
