--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.2",
-        "laravel/framework": "^9.0",
-        "laravel/laravel": "dev-master",
+        "laravel/framework": "dev-master",
         "mockery/mockery": "^1.4.4",
         "orchestra/canvas": "^7.0",
         "phpunit/phpunit": "^9.5.10 || ^10.0",
@@ -47,7 +46,7 @@
     },
     "suggest": {
         "fakerphp/faker": "Allow using Faker for testing (^1.9.2).",
-        "laravel/framework": "Required for testing (^9.0).",
+        "laravel/framework": "Required for testing (^10.0).",
         "mockery/mockery": "Allow using Mockery for testing (^1.4.4).",
         "orchestra/testbench-browser-kit": "Allow using legacy Laravel BrowserKit for testing (^7.0).",
         "orchestra/testbench-dusk": "Allow using Laravel Dusk for testing (^7.0).",
@@ -57,7 +56,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "7.0-dev"
+            "dev-master": "8.0-dev"
         }
     },
     "scripts": {
