--- a/.github/workflows/parallel-tests.yml
+++ b/.github/workflows/parallel-tests.yml
@@ -23,7 +23,7 @@ jobs:
           - "locked"
           - "highest"
         experimental:
-          - true
+          - false
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
@@ -41,7 +41,7 @@ jobs:
       - name: Install PHPUnit ${{ matrix.phpunit }}
         run: |
           composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
-          composer require "nunomaduro/collision:^6.0" --dev --no-interaction --no-update
+          composer require "nunomaduro/collision:^6.1" --dev --no-interaction --no-update
           composer require "brianium/paratest:@stable" --dev --no-interaction --no-update
 
       - name: Install dependencies
