--- a/.github/workflows/parallel-tests.yml
+++ b/.github/workflows/parallel-tests.yml
@@ -21,7 +21,7 @@ jobs:
         phpunit:
           - "^9.5.10"
         dependencies:
-          - "locked"
+          - "lowest"
           - "highest"
         experimental:
           - false
