--- a/.github/workflows/parallel-tests.yml
+++ b/.github/workflows/parallel-tests.yml
@@ -23,7 +23,7 @@ jobs:
           - "highest"
           - "lowest"
         experimental:
-          - false
+          - true
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
