--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.2",
-        "laravel/framework": "^9.6",
+        "laravel/framework": "^9.7",
         "laravel/laravel": "9.x-dev",
         "mockery/mockery": "^1.4.4",
         "orchestra/canvas": "^7.0",
@@ -46,9 +46,11 @@
         "vlucas/phpdotenv": "^5.4.1"
     },
     "suggest": {
+        "brianium/paratest": "Allow using parallel tresting (^6.4).",
         "fakerphp/faker": "Allow using Faker for testing (^1.9.2).",
         "laravel/framework": "Required for testing (^9.6).",
         "mockery/mockery": "Allow using Mockery for testing (^1.4.4).",
+        "nunomaduro/collision": "Allow using Laravel style tests output and parallel testing (^6.2).",
         "orchestra/testbench-browser-kit": "Allow using legacy Laravel BrowserKit for testing (^7.0).",
         "orchestra/testbench-dusk": "Allow using Laravel Dusk for testing (^7.0).",
         "phpunit/phpunit": "Allow using PHPUnit for testing (^9.5.10|^10.0).",
