--- a/.github/workflows/parallel-tests.yml
+++ b/.github/workflows/parallel-tests.yml
@@ -19,7 +19,7 @@ jobs:
           - "8.0"
           - "8.1"
         phpunit:
-          - "^9.5.10"
+          - "9.x"
         dependencies:
           - "highest"
           - "lowest"
@@ -42,7 +42,7 @@ jobs:
       - name: Install PHPUnit ${{ matrix.phpunit }}
         run: |
           composer require "phpunit/phpunit:${{ matrix.phpunit }}" --no-interaction --no-update
-          composer require "nunomaduro/collision:^6.2" "brianium/paratest:^6.4" --dev --no-interaction --no-update
+          composer require "nunomaduro/collision:~6.2" "brianium/paratest:~6.4" --dev --no-interaction --no-update
 
       - name: Install dependencies
         uses: "ramsey/composer-install@v1"
