--- a/.github/workflows/collision-tests.yml
+++ b/.github/workflows/collision-tests.yml
@@ -25,6 +25,17 @@ jobs:
           - "lowest"
         experimental:
           - false
+        include:
+          - os: "ubuntu-latest"
+            php: "8.2"
+            phpunit: "9.x"
+            dependencies: "highest"
+            experimental: true
+          - os: "ubuntu-latest"
+            php: "8.2"
+            phpunit: "9.x"
+            dependencies: "lowest"
+            experimental: true
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
