--- a/composer.json
+++ b/composer.json
@@ -64,15 +64,11 @@
         }
     },
     "scripts": {
-        "prepare": [
-            "@php testbench package:discover --ansi"
-        ],
+        "post-autoload-dump": "@composer run prepare",
+        "prepare": "@php testbench package:discover --ansi",
         "test": [
             "@composer run prepare",
             "@php vendor/bin/phpunit -c ./ --color"
-        ],
-        "post-autoload-dump": [
-            "@composer run prepare"
         ]
     },
     "config": {
