--- a/composer.json
+++ b/composer.json
@@ -66,10 +66,7 @@
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
         "prepare": "@php testbench package:discover --ansi",
-        "test": [
-            "@composer run prepare",
-            "@php vendor/bin/phpunit -c ./ --color"
-        ]
+        "test": "@php vendor/bin/phpunit -c ./ --color"
     },
     "config": {
         "sort-packages": true
