--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "laravel/pint": "^1.1",
         "mockery/mockery": "^1.5.1",
         "orchestra/canvas": "^7.0",
+        "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^9.5.10",
         "symfony/process": "^6.0.9",
         "symfony/yaml": "^6.0.9",
