--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,8 @@
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
 /canvas.yaml export-ignore
+/phpstan-baseline.neon export-ignore
+/phpstan.neon.dist export-ignore
 /phpunit.xml export-ignore
 /sync.sh export-ignore
 /testbench.yaml export-ignore
