--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
         "prepare": [
-            "@php testbench package:create-sqlite-db --ansi",
+            "@php create-sqlite-db",
             "@php testbench package:discover --ansi"
         ],
         "test": "@php vendor/bin/phpunit -c ./ --color"
