--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,12 @@
         "prepare": [
             "@php testbench package:discover --ansi"
         ],
+        "ci": [
+            "@composer run prepare",
+            "php vendor/bin/phpstan analyse",
+            "php vendor/bin/pint",
+            "@composer run test"
+        ],
         "test": "@php vendor/bin/phpunit -c ./ --color"
     },
     "config": {
