--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,12 @@
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
         "prepare": "@php testbench package:discover --ansi",
+        "ci": [
+            "@composer run prepare",
+            "php vendor/bin/phpstan analyse",
+            "php vendor/bin/pint",
+            "@composer run test"
+        ],
         "test": "@php vendor/bin/phpunit -c ./ --color"
     },
     "config": {
