--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -39,5 +39,8 @@ jobs:
       - name: Installed dependencies
         run: composer show -D
 
+      - name: Execute Code Style Analysis
+        run: vendor/bin/pint --test
+
       - name: Execute Static Code Analysis
         run: vendor/bin/phpstan analyse
