--- a/composer.json
+++ b/composer.json
@@ -69,8 +69,8 @@
         "prepare": "@php testbench package:discover --ansi",
         "ci": [
             "@composer run prepare",
-            "php vendor/bin/phpstan analyse",
-            "php vendor/bin/pint",
+            "@php vendor/bin/phpstan analyse",
+            "@php vendor/bin/pint",
             "@composer run test"
         ],
         "test": "@php vendor/bin/phpunit -c ./ --color"
