--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 /phpstan-baseline.neon export-ignore
 /phpstan.neon.dist export-ignore
 /phpunit.xml export-ignore
+/pint.json export-ignore
 /sync.sh export-ignore
 /testbench.yaml export-ignore
 /CHANGELOG-*.md export-ignore
