--- a/.github/workflows/parallel-tests.yml
+++ b/.github/workflows/parallel-tests.yml
@@ -56,4 +56,4 @@ jobs:
           composer show -D
 
       - name: Execute tests
-        run: ./testbench package:test --parallel --exclude-group=commander
+        run: ./testbench package:test --parallel
