--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -56,7 +56,7 @@ jobs:
           composer show -D
 
       - name: Execute tests
-        run: ./testbench package:test --exclude-group=commander
+        run: ./testbench package:test
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
