Improves Parallel testing (#95)
* wip

Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

* wip

Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

* Revert "wip"

This reverts commit 752156d103d2ec8a12425cf7c05e1156d04d28e7.

* wip

Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -14,7 +14,6 @@ jobs:
       matrix:
         os:
           - "ubuntu-latest"
-          - "windows-latest"
         php:
           - "8.0"
           - "8.1"
@@ -56,4 +55,4 @@ jobs:
           composer show -D
 
       - name: Execute tests
-        run: ./testbench package:test --parallel --exclude-group=commander
+        run: ./testbench package:test --parallel
