--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -56,11 +56,11 @@ jobs:
 
       - name: Execute tests (${{ matrix.os}})
         run: vendor/bin/phpunit
-        if: matrix.os === 'ubuntu-latest'
+        if: matrix.os == 'ubuntu-latest'
 
       - name: Execute tests (${{ matrix.os}})
         run: vendor/bin/phpunit --exclude-group=deprecations
-        if: matrix.os === 'window-latest'
+        if: matrix.os == 'window-latest'
 
   # tests-on-phpunit-10:
   #   runs-on: ${{ matrix.os }}
