--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -55,7 +55,14 @@ jobs:
           composer show -D
 
       - name: Execute tests
-        run: ./testbench package:test --exclude-group=commander
+        run: ./testbench package:test --exclude-group commander
+        if: matrix.dependencies == 'highest'
+
+      - name: Execute tests
+        run: ./testbench package:test --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
@@ -102,4 +109,11 @@ jobs:
           composer-options: "--prefer-dist --no-cache"
 
       - name: Execute tests
-        run: ./testbench package:test --coverage --exclude-group=commander
+        run: ./testbench package:test --coverage --exclude-group commander
+        if: matrix.dependencies == 'highest'
+
+      - name: Execute tests
+        run: ./testbench package:test --coverage --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'
