--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -15,9 +15,9 @@ jobs:
         os:
           - "ubuntu-latest"
         php:
-          - "8.0"
-          - "8.1"
-          - "8.2"
+          - '8.0'
+          - 8.1
+          - 8.2
         phpunit:
           - "9.x"
         dependencies:
@@ -55,7 +55,14 @@ jobs:
           composer show -D
 
       - name: Execute tests
-        run: ./testbench package:test --exclude-group=commander
+        run: ./testbench package:test --exclude-group commander
+        if: matrix.dependencies == 'highest'
+
+      - name: Execute tests
+        run: ./testbench package:test --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
@@ -66,8 +73,9 @@ jobs:
           - "ubuntu-latest"
           - "windows-latest"
         php:
-          - "8.0"
-          - "8.1"
+          - '8.0'
+          - 8.1
+          - 8.2
         phpunit:
           - "^9.5.10"
         dependencies:
@@ -101,4 +109,11 @@ jobs:
           composer-options: "--prefer-dist --no-cache"
 
       - name: Execute tests
-        run: ./testbench package:test --coverage --exclude-group=commander
+        run: ./testbench package:test --coverage --exclude-group commander
+        if: matrix.dependencies == 'highest'
+
+      - name: Execute tests
+        run: ./testbench package:test --coverage --exclude-group commander,deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'
