--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -56,6 +56,13 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit
+        if: matrix.dependencies == 'highest'
+
+      - name: Execute tests
+        run: vendor/bin/phpunit --exclude-group=deprecations
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'
 
   # tests-on-phpunit-10:
   #   runs-on: ${{ matrix.os }}
