--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -55,6 +55,6 @@ jobs:
           composer show -D
 
       - name: Execute tests
-        run: ./testbench package:test --parallel
+        run: ./testbench package:test --parallel --exclude-group=deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
