--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -15,7 +15,7 @@ jobs:
         php:
           - 8.1
         dependencies:
-          - "locked"
+          - "highest"
         experimental:
           - false
 
@@ -40,8 +40,6 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
-        env:
-          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
 
       - name: Upload coverage results to Coveralls
         env:
