--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -54,10 +54,15 @@ jobs:
         run: |
           composer show -D
 
-      - name: Execute tests
+      - name: Execute tests (with deprecations)
+        run: ./testbench package:test --exclude-group commander
+        if: matrix.dependencies == 'highest'
+
+      - name: Execute tests (without deprecations)
         run: ./testbench package:test --exclude-group commander,deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+        if: matrix.dependencies != 'highest'
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
