--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -54,15 +54,13 @@ jobs:
         run: |
           composer show -D
 
-      - name: Execute tests (with deprecations)
-        run: ./testbench package:test --exclude-group commander
+      - name: Execute tests
         if: matrix.dependencies == 'highest'
-
-      - name: Execute tests (without deprecations)
-        run: ./testbench package:test --exclude-group commander,deprecations
-        env:
-          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
+          run: ./testbench package:test --exclude-group commander
         if: matrix.dependencies != 'highest'
+          run: ./testbench package:test --exclude-group commander,deprecations
+          env:
+            TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
 
   tests-with-coverage:
     runs-on: ${{ matrix.os }}
