--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -16,11 +16,71 @@ parameters:
 			path: src/Bootstrap/ConfigureRay.php
 
 		-
+			message: "#^Parameter \\$callback of method Orchestra\\\\Testbench\\\\Bootstrap\\\\ConfigureRay\\:\\:callAfterResolvingSettings\\(\\) has invalid type Spatie\\\\Ray\\\\Settings\\\\Settings\\.$#"
+			count: 1
+			path: src/Bootstrap/ConfigureRay.php
+
+		-
+			message: "#^Call to an undefined method PHPUnit\\\\Framework\\\\TestCase\\:\\:getTestResultObject\\(\\)\\.$#"
+			count: 1
+			path: src/Bootstrap/HandleExceptions.php
+
+		-
+			message: "#^Call to method getConvertDeprecationsToExceptions\\(\\) on an unknown class PHPUnit\\\\Framework\\\\TestResult\\.$#"
+			count: 1
+			path: src/Bootstrap/HandleExceptions.php
+
+		-
 			message: "#^Cannot access offset 'config' on Illuminate\\\\Contracts\\\\Foundation\\\\Application\\.$#"
 			count: 1
 			path: src/Bootstrap/HandleExceptions.php
 
 		-
-			message: "#^Parameter \\#1 \\$callback of method Illuminate\\\\Support\\\\Collection\\<int,array\\<string, array\\|int\\|object\\|string\\>\\>\\:\\:transform\\(\\) expects callable\\(array\\{function\\: string, line\\?\\: int, file\\?\\: string, class\\?\\: class\\-string, type\\?\\: string, args\\?\\: array, object\\?\\: object\\}, int\\)\\: array\\{function\\: string, line\\?\\: int, file\\?\\: string, class\\?\\: class\\-string, type\\?\\: string, args\\?\\: array, object\\?\\: object\\}, Closure\\(array\\)\\: non\\-falsy\\-string\\|null given\\.$#"
+			message: "#^Class Orchestra\\\\Testbench\\\\Exceptions\\\\DeprecatedException does not have a constructor and must be instantiated without any parameters\\.$#"
+			count: 1
+			path: src/Bootstrap/HandleExceptions.php
+
+		-
+			message: "#^Invalid type Orchestra\\\\Testbench\\\\Exceptions\\\\DeprecatedException to throw\\.$#"
+			count: 2
+			path: src/Bootstrap/HandleExceptions.php
+
+		-
+			message: "#^PHPDoc tag @throws with type ErrorException\\|PHPUnit\\\\Framework\\\\Error\\\\Deprecated is not subtype of Throwable$#"
+			count: 1
+			path: src/Bootstrap/HandleExceptions.php
+
+		-
+			message: "#^PHPDoc tag @var for variable \\$testResult contains unknown class PHPUnit\\\\Framework\\\\TestResult\\.$#"
+			count: 1
+			path: src/Bootstrap/HandleExceptions.php
+
+		-
+			message: "#^Call to an undefined method Orchestra\\\\Testbench\\\\Exceptions\\\\DeprecatedException\\:\\:getMessage\\(\\)\\.$#"
 			count: 1
 			path: src/Exceptions/DeprecatedException.php
+
+		-
+			message: "#^Call to an undefined method Orchestra\\\\Testbench\\\\Exceptions\\\\DeprecatedException\\:\\:getTrace\\(\\)\\.$#"
+			count: 1
+			path: src/Exceptions/DeprecatedException.php
+
+		-
+			message: "#^Unable to resolve the template type TKey in call to function collect$#"
+			count: 1
+			path: src/Exceptions/DeprecatedException.php
+
+		-
+			message: "#^Unable to resolve the template type TValue in call to function collect$#"
+			count: 1
+			path: src/Exceptions/DeprecatedException.php
+
+		-
+			message: "#^Call to an undefined method Orchestra\\\\Testbench\\\\TestCase\\:\\:getName\\(\\)\\.$#"
+			count: 1
+			path: src/TestCase.php
+
+		-
+			message: "#^Call to static method getInstance\\(\\) on an unknown class PHPUnit\\\\Util\\\\Annotation\\\\Registry\\.$#"
+			count: 1
+			path: src/TestCase.php
