--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -14,6 +14,7 @@ parameters:
   excludePaths:
     - src/Concerns/InteractsWithNotSuccessfulTests.php
     - src/Exceptions/DeprecatedException.php
+    - src/Exceptions/PHPUnitErrorException.php
     - src/Foundation/Console/TestCommand.php
 
   checkGenericClassInNonGenericObjectType: false
