--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -25,7 +25,7 @@ jobs:
         experimental:
           - true
         include:
-          - collision: "6.x"
+          - collision: "^6.4"
             phpunit: "9.x"
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
