--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -25,8 +25,9 @@ jobs:
         experimental:
           - true
         include:
-          - collision: "^6.4"
-            phpunit: "9.x"
+          - phpunit: "9.x"
+            collision: "^6.4"
+
 
     name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} on ${{ matrix.os }} (${{ matrix.dependencies }})
 
