--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,7 @@
             "@php vendor/bin/phpstan analyse",
             "@php vendor/bin/pint"
         ],
+        "test:phpunit9": "@php vendor/bin/phpunit -c ./phpunit9.xml --color",
         "test": "@php vendor/bin/phpunit -c ./ --color"
     },
     "config": {
