--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@
 /canvas.yaml export-ignore
 /phpstan-baseline.neon export-ignore
 /phpstan.neon.dist export-ignore
+/phpunit9.xml export-ignore
 /phpunit.xml export-ignore
 /pint.json export-ignore
 /sync.sh export-ignore
