--- a/composer.json
+++ b/composer.json
@@ -38,11 +38,12 @@
         "fakerphp/faker": "^1.21",
         "laravel/framework": "^10.0",
         "laravel/laravel": "dev-master",
-        "laravel/pint": "^1.3",
+        "laravel/pint": "^1.4",
         "mockery/mockery": "^1.5.1",
         "orchestra/canvas": "^8.0",
         "phpstan/phpstan": "^1.9.7",
         "phpunit/phpunit": "^9.5.27",
+        "spatie/laravel-ray": "^1.32",
         "symfony/process": "^6.2",
         "symfony/yaml": "^6.2",
         "vlucas/phpdotenv": "^5.5.0"
