--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -58,11 +58,15 @@ jobs:
           composer show -D
 
       - name: Execute tests (with deprecations)
-        run: ./testbench package:test --parallel
-        if: matrix.dependencies == 'highest'
+        run: ./testbench package:test --parallel --exclude-group commander
+        if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
+
+      - name: Execute tests (with deprecations)
+        run: ./testbench package:test --parallel --exclude-group commander -c phpunit9.xml
+        if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
       - name: Execute tests (without deprecations)
-        run: ./testbench package:test --parallel --exclude-group=deprecations
+        run: ./testbench package:test --parallel --exclude-group commander,deprecations
         env:
           TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
         if: matrix.dependencies != 'highest'
