--- a/.github/workflows/collision-tests.yaml
+++ b/.github/workflows/collision-tests.yaml
@@ -64,7 +64,7 @@ jobs:
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (with deprecations)
-        run: ./testbench package:test --exclude-group commander -c phpunit9.xml
+        run: ./testbench package:test -c phpunit9.xml --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
       - name: Execute tests (without deprecations)
