--- a/.github/workflows/parallel-tests.yaml
+++ b/.github/workflows/parallel-tests.yaml
@@ -62,7 +62,7 @@ jobs:
         if: matrix.dependencies == 'highest' && matrix.phpunit == '10.x'
 
       - name: Execute tests (with deprecations)
-        run: ./testbench package:test --parallel --exclude-group commander -c phpunit9.xml
+        run: ./testbench package:test -c phpunit9.xml --parallel --exclude-group commander
         if: matrix.dependencies == 'highest' && matrix.phpunit == '9.x'
 
       - name: Execute tests (without deprecations)
