--- a/composer.json
+++ b/composer.json
@@ -36,12 +36,12 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.21",
-        "laravel/framework": "dev-feat/phpunit10 as 10.x-dev",
+        "laravel/framework": "^10.0",
         "laravel/pint": "^1.4",
         "mockery/mockery": "^1.5.1",
         "orchestra/canvas": "^8.0",
         "phpstan/phpstan": "^1.9.14",
-        "phpunit/phpunit": "^9.5.27 || ^10.0",
+        "phpunit/phpunit": "^9.6.0 || ^10.0.1",
         "spatie/laravel-ray": "^1.32",
         "symfony/process": "^6.2",
         "symfony/yaml": "^6.2",
